fix: adjusting cors
